# standings-cross

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
migrations/models/: 0_20220423113420_init.sql  1_20220423132704_update.sql  2_20220424142405_update.sql  3_20220424175305_update.sql  4_20220427225110_update.sql
src/: __main__.py  app.py  db.py  exceptions.py  models.py  settings.py  utils.py
src/api/: __init__.py  auth.py  schemas.py  tasks.py
tests/: test_models.py  test_schemas.py  test_utils.py
